k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vp-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vp-registry
  template:
    metadata:
      labels:
        app: vp-registry
    spec:
      containers:
        - env:
            - name: PORT
              value: '3000'
            - name: MONGO_DATABASE
              value: vp-registry
            - name: MONGO_HOST
              value: mongo
            - name: MONGO_PORT
              value: '27017'
            - name: SSIKIT_AUDITOR_URI
              value: https://auditor.gaiax.delta-dao.com
            - name: GAIAX_URL
              value: https://rpc.gaiaxtestnet.oceanprotocol.com:443
            - name: Signer1Address
              value: '0x07c6f28a65dd059c2b726b4eb7bda744942beac4'
            - name: Signer1PrivateKey
              valueFrom:
                secretKeyRef:
                  name: vp-registry-secrets
                  key: SIGNER_KEY
            - name: ContractAddress
              value: '0xFB9a956c4875826a76d47C360234FC1633C078A8'
            - name: ContractAddress_Registry
              value: '0xFB9a956c4875826a76d47C360234FC1633C078A8'
            - name: ContractAddress_RecoverSigner
              value: '0xb2f902825D87efEE4E3eF6873b071F7FA86ca9aB'
            - name: MAX_GAS_LIMIT
              value: '6666666'
          image: deltadao/vp-registry:main
          name: vp-registry
          ports:
            - containerPort: 3000
              name: http-api
---
kind: Service
apiVersion: v1
metadata:
  name: vp-registry
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: vp-registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vp-registry
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - vp-registry.gaiax.delta-dao.com
      secretName: vp-registry-tls-secret
  rules:
    - host: vp-registry.gaiax.delta-dao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vp-registry
                port:
                  number: 80
